syntax = "proto3";

package sensor;

option go_package = "./internalapi/sensor;sensor";

message VirtualMachine {
  string id = 1;
  string namespace = 2;
  string name = 3;
  string cluster_id = 4;
  string cluster_name = 5;
  map<string, string> facts = 6;
}
